crates/java-syntax/src/snapshots/java_syntax__lexer__tests__keywords_and_identifiers-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"class interface enum record\")"
---
[
    (
        CLASS_KW,
        "class",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTERFACE_KW,
        "interface",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        ENUM_KW,
        "enum",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "record",
    ),
]
