crates/java-syntax/src/snapshots/java_syntax__lexer__tests__keywords_and_identifiers-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"$myVar _underscore value123\")"
---
[
    (
        IDENTIFIER,
        "$myVar",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "_underscore",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "value123",
    ),
]
