crates/java-syntax/src/snapshots/java_syntax__lexer__tests__keywords_and_identifiers.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"public static void main\")"
---
[
    (
        PUBLIC_KW,
        "public",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STATIC_KW,
        "static",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        VOID_KW,
        "void",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "main",
    ),
]
