crates/java-syntax/src/snapshots/java_syntax__lexer__tests__operators.snap
---
source: crates/java-syntax/src/lexer.rs
expression: lex_tokens(source)
---
[
    (
        PLUS,
        "+",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        PLUS_EQUAL,
        "+=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        PLUS_PLUS,
        "++",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        MINUS,
        "-",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        MINUS_EQUAL,
        "-=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        MINUS_MINUS,
        "--",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        ARROW,
        "->",
    ),
    (
        WHITESPACE,
        "\n",
    ),
    (
        STAR,
        "*",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        MULTIPLE_EQUAL,
        "*=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        SLASH,
        "/",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        DIVIDE_EQUAL,
        "/=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        MODULO,
        "%",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        MODULO_EQUAL,
        "%=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL_EQUAL,
        "==",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NOT_EQUAL,
        "!=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NOT,
        "!",
    ),
    (
        WHITESPACE,
        "\n",
    ),
    (
        LESS,
        "<",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        LESS_EQUAL,
        "<=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        SHL,
        "<<",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        SHL_EQUAL,
        "<<=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        GREATER,
        ">",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        GREATER_EQUAL,
        ">=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        SHR,
        ">>",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        SHR_EQUAL,
        ">>=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        UNSIGNED_SHR,
        ">>>",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        UNSIGNED_SHR_EQUAL,
        ">>>=",
    ),
    (
        WHITESPACE,
        "\n",
    ),
    (
        BIT_AND,
        "&",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        AND_EQUAL,
        "&=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        BIT_OR,
        "|",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        OR_EQUAL,
        "|=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CARET,
        "^",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        XOR_EQUAL,
        "^=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        AND,
        "&&",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        OR,
        "||",
    ),
    (
        WHITESPACE,
        "\n",
    ),
]
