crates/java-syntax/src/snapshots/java_syntax__lexer__tests__separators.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"( ) { } [ ] ; , . ... :: @\")"
---
[
    (
        L_PAREN,
        "(",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        R_PAREN,
        ")",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        L_BRACE,
        "{",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        R_BRACE,
        "}",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        L_BRACKET,
        "[",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        R_BRACKET,
        "]",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        SEMICOLON,
        ";",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        COMMA,
        ",",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        DOT,
        ".",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        ELLIPSIS,
        "...",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        COLON_COLON,
        "::",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        AT,
        "@",
    ),
]
