crates/java-syntax/src/snapshots/java_syntax__lexer__tests__special_characters_and_bom-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"int x = 1;\\x1A\")"
---
[
    (
        INT_KW,
        "int",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "x",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "1",
    ),
    (
        SEMICOLON,
        ";",
    ),
]
