crates/java-syntax/src/snapshots/java_syntax__lexer__tests__special_characters_and_bom-4.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"'🐘'\")"
---
[
    InvalidChar,
]
