crates/java-syntax/src/snapshots/java_syntax__lexer__tests__special_characters_and_bom.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"\\u{FEFF}int x = 1;\")"
---
[
    (
        INT_KW,
        "int",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "x",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "1",
    ),
    (
        SEMICOLON,
        ";",
    ),
]
