crates/java-syntax/src/snapshots/java_syntax__lexer__tests__string_literals.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(r#\" \"hello world\" \"escape \\\" test\" \"\" \"#)"
---
[
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_LIT,
        "\"hello world\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_LIT,
        "\"escape \\\" test\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_LIT,
        "\"\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
]
