crates/java-syntax/src/snapshots/java_syntax__lexer__tests__string_template_features-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"\\\"a \\\\{b} c \\\\{d} e\\\"\")"
---
[
    (
        STRING_TEMPLATE_BEGIN,
        "\"a \\{",
    ),
    (
        IDENTIFIER,
        "b",
    ),
    (
        STRING_TEMPLATE_MID,
        "} c \\{",
    ),
    (
        IDENTIFIER,
        "d",
    ),
    (
        STRING_TEMPLATE_END,
        "} e\"",
    ),
]
