crates/java-syntax/src/snapshots/java_syntax__lexer__tests__string_template_features-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: lex_tokens(nested)
---
[
    (
        STRING_TEMPLATE_BEGIN,
        "\"Result: \\{",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NEW_KW,
        "new",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INT_KW,
        "int",
    ),
    (
        L_BRACKET,
        "[",
    ),
    (
        R_BRACKET,
        "]",
    ),
    (
        L_BRACE,
        "{",
    ),
    (
        NUMBER_LIT,
        "1",
    ),
    (
        COMMA,
        ",",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "2",
    ),
    (
        R_BRACE,
        "}",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_TEMPLATE_END,
        "}\"",
    ),
    (
        WHITESPACE,
        "\n",
    ),
]
